train/test from different yrs

--- a/analyze.Rmd
+++ b/analyze.Rmd
@@ -8,12 +8,13 @@ d_pm_res <- fread("res.csv")
 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = auc_rs_avg)) +
-  geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.3)
+  geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 1)
 
 d_pm_res %>% ggplot() + geom_point(aes(x = auc_test, y = auc_rs_avg)) +
-  geom_errorbar(aes(x = auc_test, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.0003)
+  geom_errorbar(aes(x = auc_test, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.0003) +
+  geom_abline(slope = 1, color = "grey70")
 
-auc_test_top <- sort(d_pm_res$auc_test, decreasing = TRUE)[5]
+auc_test_top <- sort(d_pm_res$auc_test, decreasing = TRUE)[10]
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% mutate(is_top = auc_test>=auc_test_top) %>% 
   ggplot(aes(color = is_top)) + geom_point(aes(x = rank, y = auc_rs_avg)) +
   geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.3)
