--- a/3-test_rs/analyze.Rmd
+++ b/3-test_rs/analyze.Rmd
@@ -4,21 +4,58 @@ library(data.table)
 library(dplyr)
 library(ggplot2)
 
-d_pm_res <- fread("res.csv")
+d_pm_res <- fread("res-10K.csv")
 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = auc_rs_avg)) +
   geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 1)
 
 d_pm_res %>% ggplot(aes(x = auc_test_avg, y = auc_rs_avg)) + geom_point() +
-  geom_errorbar(aes(ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.0003) +
+  geom_errorbar(aes(ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.0003, alpha = 0.2) +
   geom_abline(slope = 1, color = "grey70") +
-  geom_errorbarh(aes(xmin = auc_test_avg-auc_test_sd, xmax = auc_test_avg+auc_test_sd), height = 0.0003)
+  geom_errorbarh(aes(xmin = auc_test_avg-auc_test_sd, xmax = auc_test_avg+auc_test_sd), height = 0.0003, alpha = 0.2)
 
 auc_test_top <- sort(d_pm_res$auc_test_avg, decreasing = TRUE)[10]
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% mutate(is_top = auc_test_avg>=auc_test_top) %>%
   ggplot(aes(color = is_top)) + geom_point(aes(x = rank, y = auc_rs_avg)) +
   geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.3)
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = auc_test_avg)) +
+  geom_errorbar(aes(x = rank, ymin = auc_test_avg-auc_test_sd, ymax = auc_test_avg+auc_test_sd), width = 1)
+
+
+cor(d_pm_res$auc_rs_avg, d_pm_res$auc_test_avg)
+cor(d_pm_res$auc_rs_avg, d_pm_res$auc_test_avg, method = "spearman")
+
+
+d_pm_res %>% arrange(desc(auc_rs_avg)) %>% head(10)
+d_pm_res %>% arrange(desc(auc_test_avg)) %>% head(10)
+
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = num_leaves)) + scale_y_log10()
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = learning_rate)) + scale_y_log10()
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = min_data_in_leaf)) + scale_y_log10()
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = feature_fraction)) 
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = bagging_fraction)) 
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = lambda_l1)) 
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = lambda_l2)) 
+
+
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = ntrees))
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = ntrees)) + scale_y_log10(breaks=c(30,100,300,1000,3000))
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = runtm)) 
+
+d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = runtm)) + scale_y_log10(breaks=c(1,3,10,30,100))
+
 
 
 ```
