--- a/2-train_test_1each/analyze.Rmd
+++ b/2-train_test_1each/analyze.Rmd
@@ -4,7 +4,7 @@ library(data.table)
 library(dplyr)
 library(ggplot2)
 
-d_pm_res <- fread("res.csv")
+d_pm_res <- fread("res-10K-100.csv")
 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = auc_rs_avg)) +
@@ -20,12 +20,16 @@ d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% mutate(is_top = auc
   geom_errorbar(aes(x = rank, ymin = auc_rs_avg-auc_rs_std, ymax = auc_rs_avg+auc_rs_std), width = 0.3)
 
 
-d_pm_res %>% arrange(desc(auc_rs_avg)) %>% head(10)
+cor(d_pm_res$auc_rs_avg, d_pm_res$auc_test)
+cor(d_pm_res$auc_rs_avg, d_pm_res$auc_test, method = "spearman")
 
+
+d_pm_res %>% arrange(desc(auc_rs_avg)) %>% head(10)
 d_pm_res %>% arrange(desc(auc_test)) %>% head(10)
 
 
 d_pm_res %>% arrange(desc(auc_rs_avg)) %>% tail(10)
+d_pm_res %>% arrange(desc(auc_test)) %>% tail(10)
 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = num_leaves)) + scale_y_log10()
@@ -51,5 +55,15 @@ d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_poi
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = runtm)) 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = runtm)) + scale_y_log10(breaks=c(1,3,10,30,100))
+
+
+
+summary(d_pm_res$runtm)
+
+mean(d_pm_res$runtm)*20*100/3600
+
+
+summary(d_pm_res$ntree)
+
 
 ```
