--- a/3-test_rs/analyze.Rmd
+++ b/3-test_rs/analyze.Rmd
@@ -4,7 +4,7 @@ library(data.table)
 library(dplyr)
 library(ggplot2)
 
-d_pm_res <- fread("res-100K.csv")
+d_pm_res <- fread("res-10K.csv")
 
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = auc_rs_avg)) +
@@ -31,6 +31,9 @@ cor(d_pm_res$auc_rs_avg, d_pm_res$auc_test_avg, method = "spearman")
 d_pm_res %>% arrange(desc(auc_rs_avg)) %>% head(10)
 d_pm_res %>% arrange(desc(auc_test_avg)) %>% head(10)
 
+d_pm_res %>% arrange(desc(auc_rs_avg)) %>% tail(10)
+d_pm_res %>% arrange(desc(auc_test_avg)) %>% tail(10)
+
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = num_leaves)) + scale_y_log10()
 
@@ -56,6 +59,13 @@ d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_poi
 
 d_pm_res %>% mutate(rank = dense_rank(desc(auc_rs_avg))) %>% ggplot() + geom_point(aes(x = rank, y = runtm)) + scale_y_log10(breaks=c(1,3,10,30,100))
 
+
+summary(d_pm_res$runtm)
+
+mean(d_pm_res$runtm)*20*100/3600
+
+
+summary(d_pm_res$ntree)
 
 
 ```
